last changed at Aug 3, 2022 1:51 PM, pushed by Lockcd11

--- a/minutes/2Aug2022.md
+++ b/minutes/2Aug2022.md
@@ -1,47 +1,52 @@
-CITS3200 Team 43
+### CITS3200 Team 43
 
-Minutes of meeting 01 held Tuesday 02 Aug 2022
+#### Minutes of meeting 01 held Tuesday 02 Aug 2022
 
-Present:
+##### Present:
   Cameron Locke
   Adam McAlpine
   Callum Brown
   Harrison Oates
   Maaz Ahmed
 
-Absent:
+##### Absent:
 
-Apologies:
+##### Apologies:
   Kane Howard
 
 
-Meeting opened 3:05pm
+##### Meeting opened 3:05pm
 
-1.1 Project: Accept or decline
-  We need to decide if we're going to continue the project
-  Vote for keeping: Unanimous
+>1.1 Project: Accept or decline
+ >> We need to decide if we're going to continue the project
+  >>>Vote for keeping: Unanimous
 
-1.2 Scoping meeting
-  Tues 3-6 timeslot works for us -- Action Cam to reply to Dr. Ward with timeslot
+>1.2 Scoping meeting
+ >>Tues 3-6 timeslot works for us -- <b>Action Cam to reply to Dr. Ward with timeslot</b>
   
-1.3 Bookkeeping
-   -- Action Cam to get minuting site
+>1.3 Bookkeeping
+   >><b> Action Cam to get minuting site</b>
    
-1.4 Frontend vs Backend
-   Backend Requirements
-     Database, Security, Contacts
-   Frontend Requirements
-     Webapp?
+>1.4 Frontend vs Backend
+   >><b>Backend Requirements</b>
+     <br>Database, Security, Contacts<br>
+   >><b>Frontend Requirements</b>
+     <br>Webapp?
      
-1.5 Questions for Dr Ward
-   Where is the information now, and how is it stored?
-   Would a webapp work
-   What are we optimising it for
-   Maintenance requirements
+>1.5 Questions for Dr Ward
+   >>Where is the information now, and how is it stored?<br>
+   Would a webapp work<br>
+   What are we optimising it for<br>
+   Maintenance requirements<br>
      
-1.6 Next meeting
-   Scoping meeting whenisgood -- Action Cam
+>1.6 Next meeting
+   >>Scoping meeting whenisgood <b> Action Cam</b><br>
    Next team meeting 3pm Tues.
 
-Meeting Closed 4:07
+##### Meeting Closed 4:07
+
+##### Action Items
+>Cam to reply to Dr. Ward [DONE]<br>
+>Cam to link minuting site [DONE - hackmd.io]<br>
+>Cam to make scope meeting whenisgood [DONE]
     
