last changed at Aug 4, 2022 2:43 PM, pushed by Lockcd11
Actual minutes

--- a/minutes/04Aug2022.md
+++ b/minutes/04Aug2022.md
@@ -3,23 +3,49 @@
 ### Agenda for Scope meeting Thursday 04 Aug 2022
 
 #### Attending
+* Dr Tanya Ward
+* Cameron Locke
+* Maaz Ahmed
+* Callum Brown
 
 #### Apologies
 * Adam McAlpine
 * Kane Howard
+* Harrison Oates
 
 #### Absent
 
-### Meeting Opened XX:XX
+### Meeting Opened 14:00
 
 1. General Introductions
 2. Confirmation of Project Requirements
-3. Intended use cases
-4. Maintenance and scaling requirements
-5. Location, size and format of raw data
-6. Preferred format of final product
-7. Ongoing contact
+    > Demonstration of connections and reach
+    > Record Keeping and New Collaborations
+    > Similar to UWA rope based system
+    > 
+4. Intended use cases
+    > To be used by individual researchers, facilitators, and for promotion <br>
+    > Center of Research excellence <br>
+    > Brings the team into national UWA focussed collaborative <br>
+    > Extends to international teams <br>
+    > Two degrees of separation from the Core Team <br>
+    > Finding new collaborators with particular areas of expertise
+6. Maintenance and scaling requirements
+    > For core publications and researchers, less than 100 additions per year, this can be set up so that Dr Ward or an associate can add those directly
+8. Location, size and format of raw data
+    > Lists of people and publications (Back to 2015) <br>
+    > Some but not all with DOI links <br>
+    > Example used pubmed to pull information <br>
+    > Broader reach from Scopus (API may give us issues, but scopus does have unique researcher ids) <br>
+    > Dr Ward has most of the scopus IDs required
+10. Preferred format of final product
+    >10.1 Webapp should be fine
+12. Ongoing contact<br>
+    >Team to update Dr Ward once we've established the feasibility of each aspect of the project and the likely possible scale
+13. Logistics<br>
+    > Microsoft Teams Team for the project, a place for updates and links.<br>
+    Dr Ward to be given github link if required
 
-### Meeting Closed XX:XX
+### Meeting Closed 14:30
 
 #### Action Items
