last changed at Aug 9, 2022 4:16 PM, pushed by Lockcd11

--- a/minutes/09Aug2022.md
+++ b/minutes/09Aug2022.md
@@ -3,12 +3,18 @@
 ### Agenda for team meeting Tuesday 09 Aug 2022
 
 #### Attending
-*
+* Adam McAlpine
+* Callum Brown
+* Cameron Locke
+* Harrison Oates
+* Maaz Ahmed
+
 
 #### Apologies
-* 
+* Kane Howard
 
 #### Absent
+
 
 ### Meeting Opened 15:00
 
@@ -35,18 +41,28 @@
 5. Preferred format of final product
     >10.1 Webapp should be fine
 6. Ongoing contact<br>
-    >Team to update Dr Ward once we've established the feasibility of each aspect of the project and the likely possible scale
+    >Team to update Dr Ward once we've established the feasibility of each aspect of the project and the likely possible scale <b>Action: Update Dr Ward</b>
 7. Logistics<br>
     > Microsoft Teams Team for the project, a place for updates and links.<br>
     Dr Ward to be given github link if required
 8. Team Leader<br>
     > Role of team leader
-9. Auditor Email<br>
+9. Auditor Email (Jichunyang Li)<br>
     > Sprint 1 <br>
     > Deliverables <br>
+    >> Basic info at https://github.com/Lockcd11/CITS3200-Team43/tree/main/Week1Deliverables, each to be collated by a team member.
+    >> Skill and Resource Audit: Maaz<br>
+    >> Risk Register: Callum<br>
+    >> Project Acceptance Test: Adam<br>
+    >> Scope of Work: Cam<br>
+    >> Sprint 2 Stories: Harry<br>
 10. Plan for Sprint 1
-11. Further questions for Dr Ward
+    > https://teaching.csse.uwa.edu.au/units/CITS3200/project/Sprint1_Def.html
+12. Further questions for Dr Ward <b>Action: Cam</b>
+    > How big is the core team
+    > 
 
-### Meeting Closed 
+### Meeting Closed 4:30
 
 #### Action Items
+Cam to contact Dr Ward regarding updates and core team size
