--- a/minutes/09Aug2022.md
+++ b/minutes/09Aug2022.md
@@ -65,4 +65,9 @@
 ### Meeting Closed 4:30
 
 #### Action Items
-Cam to contact Dr Ward regarding updates and core team size
+Cam to contact Dr Ward regarding updates and core team size <br>
+    >> Skill and Resource Audit: Maaz<br>
+    >> Risk Register: Callum<br>
+    >> Project Acceptance Test: Adam<br>
+    >> Scope of Work: Cam<br>
+    >> Sprint 2 Stories: Harry<br>
