--- a/minutes/09Aug2022.md
+++ b/minutes/09Aug2022.md
@@ -59,8 +59,8 @@
 10. Plan for Sprint 1
     > https://teaching.csse.uwa.edu.au/units/CITS3200/project/Sprint1_Def.html
 12. Further questions for Dr Ward <b>Action: Cam</b>
-    > How big is the core team
-    > 
+    > How big is the core team <br>
+    > What are the dollar values of aspects of the project
 
 ### Meeting Closed 4:30
 
